Добавил HTML-разметку

--- a/index.html
+++ b/index.html
@@ -2,11 +2,271 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт</title>
   </head>
   <body>
+    <header class="main-header">
+      <h1 visually hidden>Магазин стройматериалов и оборудования "Техномарт"</h1>
+      <div class="logo">
+        Техномарт
+      </div>
+      <input type="text" class="search">
+      <div class="bookmarks">
+        Закладки: <span>0</span>
+      </div>
+      <div class="basket">
+        Корзина: <span>0</span>
+      </div>
+      <button type="button">Оформить заказ</button>
+      <p class="description">
+        <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+      </p>
+      <div class="contacts-top">
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <address>г. Санкт-Петербург, ул. Б. Конюшенная д 19/8</address>
+      </div>
+      <p class="enter">
+        Войти
+      </p>
+      <p class="registration">
+        Регистрация
+      </p>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Компания</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Каталог</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Новости</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Спецпредложения</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Доставка</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main>
+
+      <section class="choice">
+        <h2 visually hidden>Ассортимент</h2>
+        <div class="materials">
+          <img src="#" alt="Материалы">
+          <h3>Материалы</h3>
+          <a href="#">На любой вкус</a>
+        </div>
+        <div class="tools">
+          <img src="#" alt="Инструмент">
+          <h3>Инструмент</h3>
+          <a href="#">На все случаи</a>
+        </div>
+        <div class="machinery">
+          <img src="#" alt="Техника">
+          <h3>Техника</h3>
+          <a href="#">Для стройки</a>
+        </div>
+        <div class="discounts">
+          <img src="#" alt="Скидки">
+          <h3>Скидки 50%</h3>
+          <a href="#">На 350 товаров</a>
+        </div>
+        <div class="delivery">
+          <img src="#" alt="Доставка">
+          <h3>Доставка</h3>
+          <a href="#">Бесплатно</a>
+        </div>
+        <div class="slider">
+          <img src="#" alt="Перфораторы">
+          <h2 class="perforators">
+            Перфораторы
+          </h2>
+          <p>Настоящие мужские игрушки</p>
+          <a href="#">Открыть каталог</a>
+        </div>
+      </section>
+
+      <section class="goods">
+        <h2>Популярные товары</h2>
+        <a href="#">Все популярные товары</a>
+        <ul class="bosch-perforators">
+          <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 9000">
+            <p class="model">
+              Перфоратор BOSCH BFG 9000
+            </p>
+            <p class="old-price">
+              32500 Р.
+            </p>
+            <div class="new-price">
+              25500 Р.
+            </div>
+          </li>
+          <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 3000">
+            <p class="model">
+              Перфоратор BOSCH BFG 3000
+            </p>
+            <p class="old-price">
+              22500 Р.
+            </p>
+            <div class="new-price">
+              15500 Р.
+            </div>
+            </li>
+          </li>
+          <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 6000">
+            <p class="model">
+              Перфоратор BOSCH BFG 6000
+            </p>
+            <p class="old-price">
+              30500 Р.
+            </p>
+            <div class="new-price">
+              25500 Р.
+            </div>
+          </li>
+          <li>
+            <img src="#" alt="Перфоратор BOSCH BFG 2000">
+            <p class="model">
+              Перфоратор BOSCH BFG 2000
+            </p>
+            <div class="new-price">
+              12500 Р.
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="manufacturers">
+        <h2>Популярные производители</h2>
+        <a href="#">Все популярные товары</a>
+        <ul class="popular-manufacturers">
+          <li>
+            <img src="#" alt="Bosch">
+          </li>
+          <li>
+            <img src="#" alt="Makita">
+          </li>
+          <li>
+            <img src="#" alt="Dewalt">
+          </li>
+          <li>
+            <img src="#" alt="Интерскол">
+          </li>
+          <li>
+            <img src="#" alt="Hitachi">
+          </li>
+          <li>
+            <img src="#" alt="LG">
+          </li>
+          <li>
+            <img src="#" alt="AEG">
+          </li>
+          <li>
+            <img src="#" alt="Metabo">
+          </li>
+        </ul>
+      </section>
+
+      <section class="services">
+        <h2>Сервисы</h2>
+        <p>Хороший магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul class="services-list">
+          <li class="services-list-item-active">
+            Доставка
+          </li>
+          <li class="services-list-item">
+            Гарантия
+          </li>
+          <li class="services-list-item">
+            Кредит
+          </li>
+        </ul>
+        <div class="services-delivery">
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар пряму к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
+        </div>
+      </section>
+
+      <section class="about">
+        <h1>Компания "Техномарт"</h1>
+        <p class="real-shopping">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах</p>
+        <p class="we-can-deliver">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными Компаниями:</p>
+        <ul class="carriers">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">Подробнее о компании</a>
+      </section>
+
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наша офис</p>
+        <img src="#" alt="Карта">
+        <a href="#">Заблудились? Напишите нам</a>
+      </section>
+
+    </main>
+
+    <footer>
+
+      <section class="contacts">
+        <div class="footer-nav">
+          <div class="logo-big">
+            Техномарт
+          </div>
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <div class="bottom-nav">
+            <ul class="bottom-nav-list">
+              <li class="nav-list-item">Компания</li>
+              <li class="nav-list-item">Новости</li>
+              <li class="nav-list-item">Каталог</li>
+              <li class="nav-list-item">Доставка</li>
+              <li class="nav-list-item">Контакты</li>
+              <li class="nav-list-item">Материалы</li>
+              <li class="nav-list-item">Техника</li>
+              <li class="nav-list-item">Инструмент</li>
+              <li class="nav-list-item">Спецпредложения</li>
+            </ul>
+          </div>  
+        </div>
+      </section>
+
+      <section class="contacts-bottom">
+        <div class="copyright">
+          &copy; 2010-2020 Компания "Техномарт". Все права защищены
+        </div>
+        <ul class="socials">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="email">
+          Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </div>
+        <div class="author">
+          Разработано -<a href="#">htmlacademy.ru</a> 
+          <span></span>
+        </div>
+      </section>
+
+    </footer>
 
   </body>
 </html>
