Исправил сетку товаров в perforators.html

--- a/perforators.html
+++ b/perforators.html
@@ -52,89 +52,83 @@
         <div class="price">По цене</div>
         <div class="type">По типу</div>
         <div class="functionality">По функционалу</div>
-        <table>
-            <tr>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 6000">
-                    <div class="old-price">
-                        30500 Р.
-                    </div>
-                    <div class="new-price">
-                        25500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 6000">
-                    <div class="old-price">
-                        30500 Р.
-                    </div>
-                    <div class="new-price">
-                        25500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 6000">
-                    <div class="old-price">
-                        30500 Р.
-                    </div>
-                    <div class="new-price">
-                        25500 Р.
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 3000">
-                    <div class="old-price">
-                        22500 Р.
-                    </div>
-                    <div class="new-price">
-                        15500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 6000">
-                    <div class="old-price">
-                        30500 Р.
-                    </div>
-                    <div class="new-price">
-                        25500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 2000">
-                    <div class="new-price">
-                        12500 Р.
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 3000">
-                    <div class="old-price">
-                        22500 Р.
-                    </div>
-                    <div class="new-price">
-                        15500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 6000">
-                    <div class="old-price">
-                        30500 Р.
-                    </div>
-                    <div class="new-price">
-                        25500 Р.
-                    </div>
-                </td>
-                <td>
-                    <img src="#" alt="Перфоратор BOSCH BFG 2000">
-                    <div class="new-price">
-                        12500 Р.
-                    </div>
-                </td>
-            </tr>
-        </table>
+        <div class="perforators">
+            <div class="bfg-6000">
+                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <div class="old-price">
+                    30500 Р.
+                </div>
+                <div class="new-price">
+                    25500 Р.
+                </div>
+            </div>
+            <div class="bfg-6000">
+                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <div class="old-price">
+                    30500 Р.
+                </div>
+                <div class="new-price">
+                    25500 Р.
+                </div>
+            </div>
+            <div class="bfg-6000">
+                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <div class="old-price">
+                    30500 Р.
+                </div>
+                <div class="new-price">
+                    25500 Р.
+                </div>
+            </div>
+            <div class="bfg-3000">
+                <img src="#" alt="Перфоратор BOSCH BFG 3000">
+                <div class="old-price">
+                    22500 Р.
+                </div>
+                <div class="new-price">
+                    15500 Р.
+                </div>
+            </div>
+            <div class="bfg-6000">
+                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <div class="old-price">
+                    30500 Р.
+                </div>
+                <div class="new-price">
+                    25500 Р.
+                </div>
+            </div>
+            <div class="bfg-2000">
+                <img src="#" alt="Перфоратор BOSCH BFG 2000">
+                <div class="new-price">
+                    12500 Р.
+                </div>
+            </div>
+            <div class="bfg-3000">
+                <img src="#" alt="Перфоратор BOSCH BFG 3000">
+                <div class="old-price">
+                    22500 Р.
+                </div>
+                <div class="new-price">
+                    15500 Р.
+                </div>
+            </div>
+            <div class="bfg-6000">
+                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <div class="old-price">
+                    30500 Р.
+                </div>
+                <div class="new-price">
+                    25500 Р.
+                </div>
+            </div>
+            <div class="bfg-2000">
+                <img src="#" alt="Перфоратор BOSCH BFG 2000">
+                <div class="new-price">
+                    12500 Р.
+                </div>
+            </div>
+        </div>
 
         <div class="pagination">
             <span>1</span>
