--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Техномарт</title>
+    <title>Техномарт | Главная</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header class="main-header">
@@ -10,11 +11,16 @@
       <div class="logo">
         Техномарт
       </div>
-      <input type="text" class="search">
+      <div class="search">
+        <img src="./img/icon-search.svg" alt="Поиск">
+        Поиск
+      </div>
       <div class="bookmarks">
+        <img src="./img/icon-bookmark.svg" alt="Закладки">
         Закладки: <span>0</span>
       </div>
       <div class="basket">
+        <img src="./img/icon-cart.svg" alt="Корзина">
         Корзина: <span>0</span>
       </div>
       <button type="button">Оформить заказ</button>
@@ -22,6 +28,7 @@
         <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
       </p>
       <div class="contacts-top">
+        <img src="./img/icon-phone.svg" alt="Телефон">
         <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         <address>г. Санкт-Петербург, ул. Б. Конюшенная д 19/8</address>
       </div>
@@ -63,32 +70,37 @@
       <section class="choice">
         <h2 visually hidden>Ассортимент</h2>
         <div class="materials">
-          <img src="#" alt="Материалы">
+          <img src="./img/background-materials.png" width="300" height="123" alt="Материалы">
+          <img src="./img/icon-1.svg" alt="Материалы">
           <h3>Материалы</h3>
           <a href="#">На любой вкус</a>
         </div>
         <div class="tools">
-          <img src="#" alt="Инструмент">
+          <img src="./img/background-tools.png" width="300" height="123" alt="Инструмент">
+          <img src="./img/icon-2.svg" alt="Инструмент">
           <h3>Инструмент</h3>
           <a href="#">На все случаи</a>
         </div>
         <div class="machinery">
-          <img src="#" alt="Техника">
+          <img src="./img/background-machinery.png" width="300" height="123" alt="Техника">
+          <img src="./img/icon-3.svg" alt="Техника">
           <h3>Техника</h3>
           <a href="#">Для стройки</a>
         </div>
         <div class="discounts">
-          <img src="#" alt="Скидки">
+          <img src="./img/background-discounts.png" width="300" height="123" alt="Скидки">
+          <img src="./img/icon-4.svg" alt="Скидки">
           <h3>Скидки 50%</h3>
           <a href="#">На 350 товаров</a>
         </div>
         <div class="delivery">
-          <img src="#" alt="Доставка">
+          <img src="./img/background-delivery.png" width="300" height="123" alt="Доставка">
+          <img src="./img/icon-5.svg" alt="Доставка">
           <h3>Доставка</h3>
           <a href="#">Бесплатно</a>
         </div>
         <div class="slider">
-          <img src="#" alt="Перфораторы">
+          <img src="./img/guy.jpg" width="620" height="266" alt="Баннер">
           <h2 class="perforators">
             Перфораторы
           </h2>
@@ -102,7 +114,7 @@
         <a href="#">Все популярные товары</a>
         <ul class="bosch-perforators">
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 9000">
+            <img src="./img/bfg9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
             <p class="model">
               Перфоратор BOSCH BFG 9000
             </p>
@@ -114,7 +126,7 @@
             </div>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 3000">
+            <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             <p class="model">
               Перфоратор BOSCH BFG 3000
             </p>
@@ -127,7 +139,7 @@
             </li>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 6000">
+            <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             <p class="model">
               Перфоратор BOSCH BFG 6000
             </p>
@@ -139,7 +151,7 @@
             </div>
           </li>
           <li>
-            <img src="#" alt="Перфоратор BOSCH BFG 2000">
+            <img src="./img/bfg2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
             <p class="model">
               Перфоратор BOSCH BFG 2000
             </p>
@@ -155,28 +167,28 @@
         <a href="#">Все популярные товары</a>
         <ul class="popular-manufacturers">
           <li>
-            <img src="#" alt="Bosch">
+            <img src="./img/logo_bosch.png" width="220" height="145" alt="Bosch">
           </li>
           <li>
-            <img src="#" alt="Makita">
+            <img src="./img/logo_makita.jpg" width="220" height="145" alt="Makita">
           </li>
           <li>
-            <img src="#" alt="Dewalt">
+            <img src="./img/logo_dewalt.jpg" width="220" height="145" alt="Dewalt">
           </li>
           <li>
-            <img src="#" alt="Интерскол">
+            <img src="./img/logo_interskol.jpg" width="220" height="145" alt="Интерскол">
           </li>
           <li>
-            <img src="#" alt="Hitachi">
+            <img src="./img/logo_hitachi.jpg" width="220" height="145" alt="Hitachi">
           </li>
           <li>
-            <img src="#" alt="LG">
+            <img src="./img/logo_lg.jpg" width="220" height="145" alt="LG">
           </li>
           <li>
-            <img src="#" alt="AEG">
+            <img src="./img/logo_aeg.jpg" width="220" height="145" alt="AEG">
           </li>
           <li>
-            <img src="#" alt="Metabo">
+            <img src="./img/logo_metabo.jpg" width="220" height="145" alt="Metabo">
           </li>
         </ul>
       </section>
@@ -198,6 +210,7 @@
         <div class="services-delivery">
           <h2>Доставка</h2>
           <p>Мы с удовольствием доставим ваш товар пряму к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
+          <img src="./img/truck.png"  width="468" height="261" alt="Доставка">
         </div>
       </section>
 
@@ -216,7 +229,7 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наша офис</p>
-        <img src="#" alt="Карта">
+        <img src="./img/map.jpg"  width="300" height="158" alt="Карта">
         <a href="#">Заблудились? Напишите нам</a>
       </section>
 
@@ -252,9 +265,15 @@
           &copy; 2010-2020 Компания "Техномарт". Все права защищены
         </div>
         <ul class="socials">
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <img src="./img/icon-vk.svg" alt="ВКонтакте">
+          </li>
+          <li>
+             <img src="./img//icon-fb.svg" alt="Фейсбук">
+          </li>
+          <li>
+            <img src="./img/icon-insta.svg" alt="Инстаграм">
+          </li>
         </ul>
         <div class="email">
           Обратная связь:
