--- a/perforators.html
+++ b/perforators.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Техномарт | Перфораторы</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
@@ -54,7 +55,7 @@
         <div class="functionality">По функционалу</div>
         <div class="perforators">
             <div class="bfg-6000">
-                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 <div class="old-price">
                     30500 Р.
                 </div>
@@ -63,7 +64,7 @@
                 </div>
             </div>
             <div class="bfg-6000">
-                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 <div class="old-price">
                     30500 Р.
                 </div>
@@ -72,7 +73,7 @@
                 </div>
             </div>
             <div class="bfg-6000">
-                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 <div class="old-price">
                     30500 Р.
                 </div>
@@ -81,7 +82,7 @@
                 </div>
             </div>
             <div class="bfg-3000">
-                <img src="#" alt="Перфоратор BOSCH BFG 3000">
+                <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 <div class="old-price">
                     22500 Р.
                 </div>
@@ -90,7 +91,7 @@
                 </div>
             </div>
             <div class="bfg-6000">
-                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 <div class="old-price">
                     30500 Р.
                 </div>
@@ -99,13 +100,13 @@
                 </div>
             </div>
             <div class="bfg-2000">
-                <img src="#" alt="Перфоратор BOSCH BFG 2000">
+                <img src="./img/bfg2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 <div class="new-price">
                     12500 Р.
                 </div>
             </div>
             <div class="bfg-3000">
-                <img src="#" alt="Перфоратор BOSCH BFG 3000">
+                <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 <div class="old-price">
                     22500 Р.
                 </div>
@@ -114,7 +115,7 @@
                 </div>
             </div>
             <div class="bfg-6000">
-                <img src="#" alt="Перфоратор BOSCH BFG 6000">
+                <img src="./img/bfg6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 <div class="old-price">
                     30500 Р.
                 </div>
@@ -123,7 +124,7 @@
                 </div>
             </div>
             <div class="bfg-2000">
-                <img src="#" alt="Перфоратор BOSCH BFG 2000">
+                <img src="./img/bfg2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 <div class="new-price">
                     12500 Р.
                 </div>
