--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <h1 visually hidden>Магазин стройматериалов и оборудования "Техномарт"</h1>
       <div class="logo">
-        Техномарт
+        <img src="./img/logo_tehnomart.jpg" alt="Техномарт">
       </div>
       <div class="search">
         <img src="./img/icon-search.svg" alt="Поиск">
@@ -32,12 +32,15 @@
         <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         <address>г. Санкт-Петербург, ул. Б. Конюшенная д 19/8</address>
       </div>
-      <p class="enter">
-        Войти
-      </p>
-      <p class="registration">
-        Регистрация
-      </p>
+      <div class="personal">
+        <img src="./img/icon-enter.svg" alt="Войти">
+        <span class="personal__enter">
+          Войти
+        </span> 
+        <span class="personal__registration">
+          Регистрация
+        </span>
+      </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li class="site-navigation-item">
@@ -70,31 +73,26 @@
       <section class="choice">
         <h2 visually hidden>Ассортимент</h2>
         <div class="materials">
-          <img src="./img/background-materials.png" width="300" height="123" alt="Материалы">
           <img src="./img/icon-1.svg" alt="Материалы">
           <h3>Материалы</h3>
           <a href="#">На любой вкус</a>
         </div>
         <div class="tools">
-          <img src="./img/background-tools.png" width="300" height="123" alt="Инструмент">
           <img src="./img/icon-2.svg" alt="Инструмент">
           <h3>Инструмент</h3>
           <a href="#">На все случаи</a>
         </div>
         <div class="machinery">
-          <img src="./img/background-machinery.png" width="300" height="123" alt="Техника">
           <img src="./img/icon-3.svg" alt="Техника">
           <h3>Техника</h3>
           <a href="#">Для стройки</a>
         </div>
         <div class="discounts">
-          <img src="./img/background-discounts.png" width="300" height="123" alt="Скидки">
           <img src="./img/icon-4.svg" alt="Скидки">
           <h3>Скидки 50%</h3>
           <a href="#">На 350 товаров</a>
         </div>
         <div class="delivery">
-          <img src="./img/background-delivery.png" width="300" height="123" alt="Доставка">
           <img src="./img/icon-5.svg" alt="Доставка">
           <h3>Доставка</h3>
           <a href="#">Бесплатно</a>
@@ -240,7 +238,7 @@
       <section class="contacts">
         <div class="footer-nav">
           <div class="logo-big">
-            Техномарт
+            <img src="./img/logo_tehnomart.jpg" alt="Техномарт">
           </div>
           <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
