--- a/perforators.html
+++ b/perforators.html
@@ -6,6 +6,70 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header class="main-header">
+        <h1 visually hidden>Магазин стройматериалов и оборудования "Техномарт"</h1>
+        <div class="logo">
+            <img src="./img/logo_tehnomart.jpg" alt="Техномарт">
+        </div>
+        <div class="search">
+            <img src="./img/icon-search.svg" alt="Поиск">
+            Поиск
+        </div>
+        <div class="bookmarks">
+            <img src="./img/icon-bookmark.svg" alt="Закладки">
+            Закладки: <span>0</span>
+        </div>
+        <div class="basket">
+            <img src="./img/icon-cart.svg" alt="Корзина">
+            Корзина: <span>0</span>
+        </div>
+        <button type="button">Оформить заказ</button>
+        <p class="description">
+            <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+        </p>
+        <div class="contacts-top">
+            <img src="./img/icon-phone.svg" alt="Телефон">
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <address>г. Санкт-Петербург, ул. Б. Конюшенная д 19/8</address>
+        </div>
+        <div class="personal">
+            <img src="./img/icon-user.svg" alt="Пользователь">
+            <span class="personal__user">
+                Равшан Джамшутович
+            </span>
+            <span class="user__orders">
+                Мои заказы
+            </span>
+            <span class="user__cabinet">
+                Личный кабинет
+            </span>
+        </div>
+        <nav class="main-navigation">
+            <ul class="site-navigation">
+                <li class="site-navigation-item">
+                    <a href="#">Главная</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Компания</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Каталог</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Новости</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Спецпредложения</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Доставка</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <section class="breadcrumbs">
         <ul class="breadcrumbs-list">
@@ -155,7 +219,7 @@
     <section class="contacts">
         <div class="footer-nav">
             <div class="logo-big">
-                Техномарт
+                <img src="./img/logo_tehnomart.jpg" alt="Техномарт">
             </div>
             <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -180,9 +244,15 @@
             &copy; 2010-2020 Компания "Техномарт". Все права защищены
         </div>
         <ul class="socials">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <img src="./img/icon-vk.svg" alt="ВКонтакте">
+            </li>
+            <li>
+                <img src="./img//icon-fb.svg" alt="Фейсбук">
+            </li>
+            <li>
+                <img src="./img/icon-insta.svg" alt="Инстаграм">
+            </li>
         </ul>
         <div class="email">
             Обратная связь:
