Добавил ползунок в файл catalogue

--- a/catalogue.html
+++ b/catalogue.html
@@ -92,7 +92,9 @@
             <form action="#" class="form">
                 <h2>Фильтр</h2>
                 <h3>Цена</h3>
-                №№№№№№№№№№№№№
+                <input type="range">
+                <span class="min-price">0</span>
+                <span class="max-price">30000</span>
                 <h3>Производители:</h3>
                 <input type="checkbox" checked>Bosch
                 <input type="checkbox">Интерскол
@@ -141,7 +143,7 @@
                 </div>
             </div>
             <div class="bfg-3000">
-                <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <img src="./img/bfg3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 <div class="old-price">
                     22500 Р.
                 </div>
@@ -165,7 +167,7 @@
                 </div>
             </div>
             <div class="bfg-3000">
-                <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <img src="./img/bfg3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 <div class="old-price">
                     22500 Р.
                 </div>
