--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
           </li>
           <li>
-            <img src="./img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            <img src="./img/bfg3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             <p class="model">
               Перфоратор BOSCH BFG 3000
             </p>
